--- a/package.json
+++ b/package.json
@@ -1,25 +1,11 @@
 {
-  "name": "begin-app",
+  "name": "praise-cage-api",
   "version": "0.0.0",
-  "description": "Begin basic Hello World! app for Node",
-  "arc": {
-    "app": "hello-world",
-    "http": [
-      {
-        "/": {
-          "method": "any",
-          "src": "."
-        }
-      }
-    ]
-  },
+  "description": "A fresh new Architect project!",
   "scripts": {
-    "start": "cross-env NODE_ENV=testing npx sandbox"
+    "start": "npx sandbox"
   },
   "devDependencies": {
-    "@architect/functions": "latest",
-    "@architect/sandbox": "^3.3.6",
-    "@begin/data": "latest",
-    "cross-env": "^7.0.3"
+    "@architect/architect": "^8.5.13"
   }
 }
